--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
     protocol: TLS
     key-store-type: PKCS12
     key-store: classpath:keystore/keystore.p12
-    key-store-password: changeit
+    key-store-password:
   datasource:
     url: jdbc:h2:~/TendersServer;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS tenders_server\;SET SCHEMA tenders_server\;
     username: sa
