--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build Docker image
-        run: docker build
+        run: docker build .
       - name: Tag Docker image
         run: docker tag tenders-server:latest ${{ secrets.DOCKERHUB_USERNAME }}/tenders-server:latest
       - name: Login to Docker Hub
