--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,14 +2,15 @@ name: Build Docker Image
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   itmo-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Build Docker image
-        run: docker build ../
+        run: docker build -t tenders-server .
       - name: Tag Docker image
         run: docker tag tenders-server:latest ${{ secrets.DOCKERHUB_USERNAME }}/tenders-server:latest
       - name: Login to Docker Hub
