--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Build Java
+        run: mvn clean package
       - name: Build Docker image
         run: docker build -t tenders-server .
       - name: Tag Docker image
